<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dicoding.medicinal_plants.AboutActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/bg_profil" />

        <RelativeLayout
            android:layout_width="153dp"
            android:layout_height="239dp"
            android:layout_marginStart="135dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="50dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="66dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="-22dp"
                android:text="@string/Name"
                android:textColor="@android:color/white"
                android:textSize="9pt" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="139dp"
                android:layout_height="161dp"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/profile_picture"
                android:src="@drawable/rendra"
                android:visibility="visible" />

        </RelativeLayout>

    </FrameLayout>

    <TextView
        style="@style/TextContent"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Contact"
        android:textColor="@color/colorPrimaryDark" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                style="@style/TextAbout.Field"
                android:text="@string/TProfileName" />

            <TextView
                style="@style/TextAbout.Value"
                android:text="@string/ProfileName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                style="@style/TextAbout.Field"
                android:text="@string/Ttelp" />

            <TextView
                style="@style/TextAbout.Value"
                android:text="@string/telp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/TextAbout.Field"
                android:text="@string/Temail" />

            <TextView
                style="@style/TextAbout.Value"
                android:text="@string/email" />
        </TableRow>
    </TableLayout>

</LinearLayout>
