<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="14dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        tools:src="@android:color/holo_blue_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/img_item_photo"
        android:layout_toRightOf="@id/img_item_photo"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/plants_name" />

        <TextView
            android:id="@+id/tv_item_latin_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textSize="14sp"
            android:textStyle="italic"
            tools:text="@string/latins_name" />

        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textSize="14sp"
            android:maxLines="2"
            tools:text="@string/detail" />


    </LinearLayout>
</RelativeLayout>